# sync_tcp_boost_server

./: .gitignore  CMakeLists.txt  LoginDialog.cpp  LoginDialog.hpp  LoginDialog.ui  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  NetworkManager.cpp  NetworkManager.hpp  README.md  Server.cpp  Session.cpp  Session.hpp  main.cpp  users.db
client/: CMakeCache.txt  CMakeLists.txt  Client.cpp  ClientChunk.cpp  ClientToken.cpp  Makefile  client  cmake_install.cmake
server/: CMakeLists.txt  Protocol.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  \
server/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
server/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  sync_server
server/certs/: server.crt  server.key
server/src/: CMakeCache.txt  Database.cpp  Database.hpp  Errors.cpp  Errors.hpp  Makefile  Protocol.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  cmake_install.cmake  main.cpp  sync_server
server/sync_tcp_boost_server_autogen/: deps  mocs_compilation.cpp
server/sync_tcp_boost_server_autogen/EWIEGA46WW/: moc_LoginDialog.cpp  moc_LoginDialog.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d  moc_NetworkManager.cpp  moc_NetworkManager.cpp.d
server/sync_tcp_boost_server_autogen/include/: ui_LoginDialog.h  ui_MainWindow.h
